--- a/sass/pages/_media.scss
+++ b/sass/pages/_media.scss
@@ -57,7 +57,9 @@
 
     body {
         width: 100%;
+        margin-top: 20%;
     }
+
     header {
         position: fixed;
         top: 0;
